--- a/resources/requirements.txt
+++ b/resources/requirements.txt
@@ -10,10 +10,28 @@ weasyprint>=61.0
 reportlab>=4.0.0
 
 # GUI and system integration
-tkinterdnd2>=0.3.0
 plyer>=2.1
 
-# Additional utilities
+# Cryptography and security
+cryptography>=41.0.0
+bcrypt>=4.0.0
+PyNaCl>=1.5.0
+cffi>=1.15.0
+
+# HTML/CSS processing (for weasyprint)
+cssselect2>=0.7.0
+tinycss2>=1.2.0
+pydyf>=0.8.0
+tinyhtml5>=2.0.0
+webencodings>=0.5.1
+pyphen>=0.14.0
+
+# XML processing
+lxml>=4.9.0
+
+# Python utilities
+six>=1.16.0
+setuptools>=68.0.0
 python-dateutil>=2.8.0
 Pillow>=10.0.0
 
